# zzz

./: CMakeLists.txt  README.md
OpenCV-try/: README.md
OpenCV-try/Trakbar/: CMakeLists.txt  tarkbar.cpp
OpenCV-try/color_chg/: chg.cpp
OpenCV-try/karermalnous/: CMakeLists.txt  kar.cpp
OpenCV-try/light/: CMakeLists.txt  lig.cpp
OpenCV-try/opencv_cpp/: CMakeLists.txt  opencvio.cpp
OpenCV-try/study/: CMakeLists.txt  stu1.cpp
OpenCV-try/study2/: CMakeLists.txt  stu2.cpp
OpenCV-try/study3/: CMakeLists.txt  stu3.cpp
OpenCV-try/study4/: CMakeLists.txt  stu4.cpp
